(chores) camel-pulsar: fixes some errors shown in logs