@@ -82,6 +82,7 @@
     	</dependency>
     </dependencies>
 
+
     <build>
         <plugins>
             <plugin>
@@ -95,6 +96,7 @@
                     <systemProperties>
                         <pulsar.container>apachepulsar/pulsar:${pulsar-version}</pulsar.container>
                     </systemProperties>
+                    <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-exports=java.base/sun.net=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
